Small fixes on mobile pages

--- a/app/assets/stylesheets/mobile/dashboard.css.scss
+++ b/app/assets/stylesheets/mobile/dashboard.css.scss
@@ -700,3 +700,15 @@ div.right button {
   color: orange;
 }
 
+.tableControl {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.no-favorite {
+  color: #c8c9c3;
+}
+.is-favorite {
+  color: orange;
+}
